--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^6.1.3",
-    "googleapis": "^65.0.0"
+    "googleapis": "^65.0.0",
+    "multer": "^1.4.2"
   }
 }
