--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Trying to publish and pull from youtube API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "express": "^4.17.1",
     "google-auth-library": "^6.1.3",
     "googleapis": "^65.0.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.6"
   }
 }
