--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^6.1.3",
     "googleapis": "^65.0.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "open": "^7.3.0"
   }
 }
